--- a/src/components/BeerCard/BeerCard.scss
+++ b/src/components/BeerCard/BeerCard.scss
@@ -6,15 +6,23 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  height: 40vh;
+  width: 80vw;
+  margin: auto;
+  border: 2px solid black;
+ 
 font-family: $primaryfont;
+font-size: 10px;
   .beercard__image{
     grid-row: 1/4;
     max-width: 100%;
-    height: auto;
+    height: 120px;
+    margin: auto;
   }
   .beercard__text{
    
     grid-row: 4/6;
+    height: 80px;
   }
   
 }
